--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "zendframework/zend-xmlrpc" : "~2.0"
+        "laminas/laminas-xmlrpc" : "~2.0"
     },
     "autoload": {
         "psr-0": { "Supervisor": "src/" }
